# kaspa-docs

./: .prettierignore  README.md  eslint.config.mjs  package-lock.json  package.json  source.config.ts  tsconfig.json  wrangler.jsonc
app/: global.css  layout.tsx
app/[[...slug]]/: layout.tsx  page.tsx
app/og/[...slug]/: route.tsx
components/: mdx.tsx
components/mdx/: github-alert.tsx  mermaid.tsx
content/docs/: index.mdx  meta.json  references.mdx
content/docs/integrate/: accepted-transactions.mdx  getting-started.mdx  index.mdx  kaspa-node.mdx  meta.json  transaction-payload.mdx  wallet.mdx
content/docs/programmability/: based-apps.mdx  covenants.mdx  full-vprogs.mdx  index.mdx  inline-zk.mdx  meta.json
content/docs/resources/: meta.json
examples/: .gitignore  README.md  package-lock.json  package.json
examples/browser/: accepted-transactions.html  getting-started.html  wallet.html
examples/java/: .gitignore  README.md  build.gradle  settings.gradle
examples/java/src/main/java/org/kaspa/examples/: GettingStartedExample.java
examples/java/src/main/java/org/kaspa/examples/shared/: KaspadRpcException.java  RpcClientSession.java
examples/java/src/main/proto/: messages.proto  rpc.proto
examples/node/: accepted-transactions.js  getting-started.js  wallet.js
examples/rust/: Cargo.toml
lib/: layout.shared.tsx  shared.ts
